--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
+    locale: en
+    app.locales: en|fr|de|es|pt|pt_BZ
 
 services:
     # default configuration for services in *this* file
