--- a/.env.local.dist
+++ b/.env.local.dist
@@ -1,2 +1,7 @@
 ASTROBIN_API_KEY=PutHereYourOwnApiKey
 ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
+
+###> Docker ###
+SYMFONY_APP_PATH=~/path/to/project
+TIMEZONE=Europe/Paris
+###< Docker ##
