--- a/.env.local.dist
+++ b/.env.local.dist
@@ -4,4 +4,5 @@ ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
 ###> Docker ###
 SYMFONY_APP_PATH=~/path/to/project
 TIMEZONE=Europe/Paris
+NGINX_HOST=symfony.local
 ###< Docker ##
