--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ networks:
 
 services:
     # PHP
-    dso_php:
+    php:
         build:
             context: docker/php7-fpm
             args:
-                TIMEZONE: $TIMEZONE
+                TIMEZONE: ${TIMEZONE}
         container_name: dso_php
         volumes:
-            - ".:/var/www/deep-space-objects/:rw"
+            - ".:/var/www/deep-space-objects:rw"
             - "$SSH_AUTH_SOCK:/ssh-agent:ro"
             - "~/.gitconfig:/home/site/.gitconfig:ro"
             - "~/.ssh/config:/home/site/.ssh/config:ro"
@@ -22,18 +22,22 @@ services:
             - TERM=xterm-color
 
     # NGINX
-    dso_nginx:
-        build: docker/nginx
+    nginx:
+        image: nginx:latest
         container_name: dso_nginx
         ports:
             - 80:80
-        volumes_from:
-          - dso_php
+        depends_on:
+            - php
         volumes:
+            - ./docker/nginx/default.template:/etc/nginx/conf.d/default.template
             - ./logs/nginx/:/var/log/nginx
+        environment:
+            - NGINX_HOST=${NGINX_HOST}
+        command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
     # ElasticSearch
-    dso_elasticsearch:
+    elasticsearch:
         image: docker.elastic.co/elasticsearch/elasticsearch:6.0.1
         container_name: dso_elasticsearch
         hostname: elasticsearch
@@ -49,11 +53,11 @@ services:
             - 9200:9200
 
     # Kibana
-    dso_kibana:
+    kibana:
         image: docker.elastic.co/kibana/kibana:6.0.1
         container_name: dso_kibana
         links:
-            - dso_elasticsearch
+            - elasticsearch
         ports:
             - 5601:5601
 
