--- a/config/elasticsearch/mappings/constellations.mapping.json
+++ b/config/elasticsearch/mappings/constellations.mapping.json
@@ -1,65 +1,69 @@
 {
-  "properties": {
-    "id": {
-      "type": "text",
-      "fields": {
-        "raw": {
-          "type": "keyword"
-        }
-      }
-    },
-    "geometry": {
-      "type": "geo_shape"
-    },
-    "geometry_line": {
-      "type": "geo_shape"
-    },
-    "data": {
+  "mappings": {
+    "doc": {
       "properties": {
-        "gen": {
-          "type": "text"
-        },
-        "alt": {
-          "properties": {
-            "alt": {
-              "type": "text",
-              "fields": {
-                "en": {
-                  "type": "text",
-                  "analyzer": "english"
-                },
-                "fr": {
-                  "type": "text",
-                  "analyzer": "french"
-                },
-                "es": {
-                  "type": "text",
-                  "analyzer": "spanish"
-                },
-                "de": {
-                  "type": "text",
-                  "analyzer": "german"
-                },
-                "pt": {
-                  "type": "text",
-                  "analyzer": "portuguese"
-                },
-                "it": {
-                  "type": "text",
-                  "analyzer": "italian"
-                }
-              }
+        "id": {
+          "type": "text",
+          "fields": {
+            "raw": {
+              "type": "keyword"
             }
           }
         },
-        "rank": {
-          "type": "integer"
+        "geometry": {
+          "type": "geo_shape"
         },
-        "order": {
-          "type": "integer"
+        "geometryline": {
+          "type": "geo_shape"
         },
-        "loc": {
-          "type": "text"
+        "data": {
+          "properties": {
+            "gen": {
+              "type": "text"
+            },
+            "alt": {
+              "properties": {
+                "alt": {
+                  "type": "text",
+                  "fields": {
+                    "en": {
+                      "type": "text",
+                      "analyzer": "english"
+                    },
+                    "fr": {
+                      "type": "text",
+                      "analyzer": "french"
+                    },
+                    "es": {
+                      "type": "text",
+                      "analyzer": "spanish"
+                    },
+                    "de": {
+                      "type": "text",
+                      "analyzer": "german"
+                    },
+                    "pt": {
+                      "type": "text",
+                      "analyzer": "portuguese"
+                    },
+                    "it": {
+                      "type": "text",
+                      "analyzer": "italian"
+                    }
+                  }
+                }
+              }
+            },
+            "rank": {
+              "type": "integer"
+            },
+            "order": {
+              "type": "integer"
+            },
+            "loc": {
+              "type": "text"
+            }
+          }
         }
       }
     }
