--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,8 @@ services:
         container_name: dso_php
         volumes:
             - ".:/var/www/deep-space-objects:rw"
-            - "./.docker/php7-fpm/php.ini:/usr/local/etc/php/conf.d/030-custom.ini:ro"
+            - "./docker/php7-fpm/php.ini:/usr/local/etc/php/conf.d/030-custom.ini:ro"
             - "${SSH_AUTH_SOCK}:/ssh-agent:ro"
-            - "~/.gitconfig:/home/site/.gitconfig:ro"
-            - "~/.ssh/config:/home/site/.ssh/config:ro"
         environment:
             - SSH_AUTH_SOCK=/ssh-agent
             - TERM=xterm-color
