Add user in docker stack

--- a/.env.local.dist
+++ b/.env.local.dist
@@ -5,4 +5,8 @@ ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
 SYMFONY_APP_PATH=~/path/to/project
 TIMEZONE=Europe/Paris
 NGINX_HOST=symfony.local
+# id -u
+DEV_UID=1001
+# id -g
+DEV_GID=1001
 ###< Docker ##
