--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,14 @@ services:
             args:
                 TIMEZONE: ${TIMEZONE}
         container_name: dso_php
+        user: ${DEV_UID:-1000}:${DEV_GID:-1000}
         volumes:
             - ".:/var/www/deep-space-objects:rw"
             - "./docker/php7-fpm/php.ini:/usr/local/etc/php/conf.d/030-custom.ini:ro"
             - "${SSH_AUTH_SOCK}:/ssh-agent:ro"
+        env_file:
+          - .env
+          - .env.local
         environment:
             - SSH_AUTH_SOCK=/ssh-agent
             - TERM=xterm-color
@@ -32,6 +36,9 @@ services:
         volumes:
             - ./docker/nginx/default.template:/etc/nginx/conf.d/default.template
             - ./logs/nginx/:/var/log/nginx
+        env_file:
+            - .env
+            - .env.local
         environment:
             - NGINX_HOST=${NGINX_HOST}
         command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
