Add locale in routing

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,8 @@
 controllers:
     resource: ../../src/Controller/
     type: annotation
+    prefix: /{_locale}
+    requirements:
+        _locale: '%app.locales%'
+    defaults:
+        _locale: '%locale%'
