--- a/.env
+++ b/.env
@@ -18,3 +18,11 @@ APP_SECRET=c4b4d94ef708d264951781ce224d4ea3
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+SYMFONY_APP_PATH=~/www/deep-space-objects
+TIMEZONE=Europe/Paris
+NGINX_HOST=symfony.local
+# id -u
+DEV_UID=65716
+# id -g
+DEV_GID=513
