--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
-    app_locales: en|fr|de|es|pt|pt_BZ
+    app.locales: en|fr|de|es|pt|pt_BZ|
 
 services:
     # default configuration for services in *this* file
