--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
             args:
                 TIMEZONE: ${TIMEZONE}
         container_name: dso_php
+        hostname: php
         user: ${DEV_UID:-1000}:${DEV_GID:-1000}
         volumes:
             - ".:/var/www/deep-space-objects:rw"
@@ -29,6 +30,7 @@ services:
     nginx:
         image: nginx:latest
         container_name: dso_nginx
+        hostname: nginx
         ports:
             - 80:80
         depends_on:
@@ -37,8 +39,8 @@ services:
             - ./docker/nginx/default.template:/etc/nginx/conf.d/default.template
             - ./logs/nginx/:/var/log/nginx
         env_file:
-            - .env
             - .env.local
+            - .env
         environment:
             - NGINX_HOST=${NGINX_HOST}
         command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
