--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "node-sass": "^4.10.0",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.18",
+        "vue-agile": "^0.3.7",
         "vue-loader": "^15.4.2",
         "vue-template-compiler": "^2.5.18"
     }
