--- a/docker/nginx/default.template
+++ b/docker/nginx/default.template
@@ -1,23 +1,26 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80;
+    listen [::]:80;
     server_name ${NGINX_HOST};
     root /var/www/deep-space-objects/public;
 
     location / {
-        try_files $uri @rewriteapp;
-    }
-
-    location @rewriteapp {
-        rewrite ^(.*)$ /index.php/$1 last;
+        try_files $uri /index.php$is_args$args;
     }
 
     location ~ ^/(index)\.php(/|$) {
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
+
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS off;
+
+        internal;
+    }
+
+    location ~ \.php$ {
+        return 404;
     }
 
     error_log /var/log/nginx/symfony_error.log;
