Refactoring docker container PHP-FPM

--- a/.env
+++ b/.env
@@ -22,7 +22,6 @@ MAILER_URL=null://localhost
 SYMFONY_APP_PATH=~/www/deep-space-objects
 TIMEZONE=Europe/Paris
 NGINX_HOST=symfony.local
-# id -u
-DEV_UID=65716
-# id -g
-DEV_GID=513
+
+SITE_UID=65716
+SITE_GID=513
