--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,19 @@ services:
                 TIMEZONE: ${TIMEZONE}
         container_name: dso_php
         hostname: php
-        user: ${DEV_UID:-1000}:${DEV_GID:-1000}
+        user: ${SITE_UID:-1000}:${SITE_GUID:-1000}
         volumes:
-            - ".:/var/www/deep-space-objects:rw"
+            - ".:/var/www/deep-space-objects:rw,cached"
             - "./docker/php7-fpm/php.ini:/usr/local/etc/php/conf.d/030-custom.ini:ro"
+            - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
             - "${SSH_AUTH_SOCK}:/ssh-agent:ro"
         env_file:
           - .env
-          - .env.local
         environment:
             - SSH_AUTH_SOCK=/ssh-agent
             - TERM=xterm-color
+            - SITE_UID
+            - SITE_GUID
         working_dir: /var/www/deep-space-objects
 
     # NGINX
@@ -39,7 +41,6 @@ services:
             - ./docker/nginx/default.template:/etc/nginx/conf.d/default.template
             - ./logs/nginx/:/var/log/nginx
         env_file:
-            - .env.local
             - .env
         environment:
             - NGINX_HOST=${NGINX_HOST}
@@ -69,19 +70,6 @@ services:
             - elasticsearch
         ports:
             - 5601:5601
-
-    # Elk
-#    dso_elk:
-#        image: willdurand/elk
-#        container_name: dso_elk
-#        ports:
-#            - 81:80
-#        volumes:
-#            - .docker/elk/logstash:/etc/logstash
-#            - .docker/elk/logstash/patterns:/opt/logstash/patterns
-#        volumes_from:
-#          - dso_php
-#          - dso_nginx
 
     # Redis
     dso_redis:
