--- a/docker/php7-fpm/php.ini
+++ b/docker/php7-fpm/php.ini
@@ -1,30 +1,27 @@
 ; General settings
-
 date.timezone = Europe/Paris
 xdebug.max_nesting_level=500
 short_open_tag = off
 memory_limit="512M"
-upload_max_filesize="20M"
-post_max_size="20M"
-
 
 ; Error reporting optimized for production (http://www.phptherightway.com/#error_reporting)
-
 display_errors = Off
 display_startup_errors = Off
 error_reporting = E_ALL
 log_errors = On
 error_log = /var/log/php-app/error.log
 
-; Opcache settings (best on https://www.scalingphpbook.com/best-zend-opcache-settings-tuning-config/)
-
-opcache.revalidate_freq = 0
-opcache.max_accelerated_files = 7963
-opcache.memory_consumption = 96
+# http://symfony.com/doc/current/performance.html
 opcache.interned_strings_buffer = 16
-opcache.fast_shutdown = 1
+opcache.memory_consumption = 256
+opcache.max_accelerated_files = 20000
+opcache.validate_timestamps=0
+
+; maximum memory allocated to store the results
+realpath_cache_size=4096K
+; save the results for 10 minutes (600 seconds)
+realpath_cache_ttl=600
 
 ; Extensions
-
 #extension=imagick.so
 #extension = apcu.so
