Some fix for docker

--- a/.env
+++ b/.env
@@ -25,3 +25,5 @@ NGINX_HOST=symfony.local
 
 SITE_UID=65716
 SITE_GID=513
+COMPOSER_CACHE_DIR=/home/smeaudre/.composer
+NPM_CACHE_DIR=/home/smeaudre/.npm
