--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
         user: ${SITE_UID:-1000}:${SITE_GID:-1000}
         volumes:
             - ".:/var/www/deep-space-objects:rw,cached"
+            - ${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached
+            - ${NPM_CACHE_DIR}:/home/site/.npm:rw,cached
             - "./docker/php7-fpm/php.ini:/usr/local/etc/php/conf.d/030-custom.ini:ro"
             - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
             - "${SSH_AUTH_SOCK}:/ssh-agent"
