--- a/docker/nginx/default.template
+++ b/docker/nginx/default.template
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name ${NGINX_HOST};
-     client_max_body_size 20M;
+    client_max_body_size 20M;
 
     root /var/www/deep-space-objects/public;
 
@@ -10,12 +10,12 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    # Disable this location in PROD
-    #location ~ ^/(_wdt|_profiler|_error)(/|$) {
-    #    # try to serve file directly, fallback to app.php
-    #    try_files $uri /app.php$is_args$args;
-    #}
-
+    location ~* \.(jpg|jpeg|gif|css|png|js|ico|html|eof|woff|ttf)$ {
+        if (-f $request_filename) {
+            expires 30d;
+            access_log off;
+        }
+    }
 
     location ~ ^/(index)\.php(/|$) {
         fastcgi_pass php:9000;
