--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.18",
         "vue-agile": "^0.3.7",
+        "vue-i18n": "^8.4.0",
         "vue-loader": "^15.4.2",
         "vue-template-compiler": "^2.5.18"
     }
