Adding custom exception listener

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,6 +25,12 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    # Exception listener
+    App\EventListener\ExceptionListener:
+        arguments: ["@templating"]
+        tags:
+            - {name: kernel.event_listener, event: kernel.exception }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 #    Astrobin\AbstractWebService:
