--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "hamhamfonfon/astrobin": "dev-master",
         "ruflin/elastica": "^6.0",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "4.2.*",
@@ -18,12 +19,12 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.2.*",
         "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/templating": "4.2.*",
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "4.2.*",
-        "hamhamfonfon/astrobin" : "dev-master"
+        "symfony/yaml": "4.2.*"
     },
     "repositories": [{
         "type" : "vcs",
