--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -31,3 +31,6 @@ framework:
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
     form: true
+    templating:
+        engines:
+            - twig
