Add SSL certificate - server https not installed

--- a/.env
+++ b/.env
@@ -19,11 +19,13 @@ APP_SECRET=c4b4d94ef708d264951781ce224d4ea3
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 
+#DOCKER
 SYMFONY_APP_PATH=~/www/deep-space-objects
 TIMEZONE=Europe/Paris
 NGINX_HOST=symfony.local
-
 SITE_UID=65716
 SITE_GID=513
 COMPOSER_CACHE_DIR=/home/smeaudre/.composer
 NPM_CACHE_DIR=/home/smeaudre/.npm
+SSL_CERTIFICATE_CRT=/home/smeaudre/www/ssl_certificate/localhost.crt
+SSL_CERTIFICATE_KEY=/home/smeaudre/www/ssl_certificate/localhost.key
