--- a/.env.dist
+++ b/.env.dist
@@ -19,11 +19,13 @@ APP_SECRET=SECRET
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 
+# DOCKER
 SYMFONY_APP_PATH=~/path/to/project
 TIMEZONE=Europe/Paris
 NGINX_HOST=your-symfon-y-project-name.local
-
 SITE_UID=$(id -u)
 SITE_GID=$(id -g)
 COMPOSER_CACHE_DIR=/home/$(whoami)/.composer
 NPM_CACHE_DIR=/home/$(whoami)/.npm
+SSL_CERTIFICATE_CRT=/path/to/localhost.crt
+SSL_CERTIFICATE_KEY=/path/to/localhost.key
