ExceptionListener disabled for dev environnment

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,7 +39,7 @@ services:
 
     # Exception listener
     App\EventListener\ExceptionListener:
-        arguments: ['@templating.engine.twig']
+        arguments: ['@templating.engine.twig', '%kernel.environment%']
         tags:
           - { name: kernel.event_listener, event: kernel.exception }
 
