Fix probleme default locale

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -2,8 +2,10 @@
 controllers:
     resource: ../../src/Controller/
     type: annotation
-    prefix: /{_locale}
+    prefix:
+        - /
+        - /{_locale}
     requirements:
-        _locale: '%app.locales%'
+        _locale: '%app_locales%'
     defaults:
         _locale: '%locale%'
