--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,8 +1,7 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
     csrf_protection: true
-    #http_method_override: true
+    http_method_override: true
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
@@ -19,7 +18,7 @@ framework:
     cache:
         # Put the unique name of your app here: the prefix seed
         # is used to compute stable namespaces for cache keys.
-        #prefix_seed: your_vendor_name/app_name
+        prefix_seed: dso
 
         # The app cache caches to the filesystem by default.
         # Other options include:
