--- a/docker/nginx/default.template
+++ b/docker/nginx/default.template
@@ -20,10 +20,11 @@ server {
     location ~ ^/(index)\.php(/|$) {
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
 
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param HTTPS off;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        #fastcgi_param HTTPS off;
 
         internal;
     }
