--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
             - php
         volumes:
             - ./docker/nginx/default.template:/etc/nginx/conf.d/default.template
-            - ".:/var/www/deep-space-objects:ro"
+            - ".:/var/www/deep-space-objects"
             - ./logs/nginx/:/var/log/nginx
             - ${SSL_CERTIFICATE_CRT}:/etc/nginx/ssl/localhost.crt
             - ${SSL_CERTIFICATE_KEY}:/etc/nginx/ssl/localhost.key
