--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,7 +2,6 @@ framework:
     secret: '%env(APP_SECRET)%'
     csrf_protection: true
     http_method_override: true
-
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
@@ -10,12 +9,13 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
 
-    esi: { enabled: true}
+    esi: true
     fragments: { path: /_fragment }
     php_errors:
         log: true
 
     cache:
+        app: cache.adapter.filesystem
         # Put the unique name of your app here: the prefix seed
         # is used to compute stable namespaces for cache keys.
         prefix_seed: dso
