--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
                 TIMEZONE: ${TIMEZONE}
         container_name: dso_php
         hostname: php
-        #user: ${SITE_UID:-1000}:${SITE_GID:-1000}
         volumes:
             - ".:/var/www/deep-space-objects:rw,cached"
             - ${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached
@@ -30,7 +29,10 @@ services:
 
     # NGINX
     nginx:
-        image: nginx:latest
+        build:
+            context: docker/nginx
+            args:
+                NGINX_HOST: ${NGINX_HOST}
         container_name: dso_nginx
         hostname: nginx
         ports:
@@ -39,8 +41,7 @@ services:
         depends_on:
             - php
         volumes:
-            - ./docker/nginx/default.template:/etc/nginx/conf.d/default.template
-            - ".:/var/www/deep-space-objects"
+            - ".:/var/www/deep-space-objects:cached"
             - ./logs/nginx/:/var/log/nginx
             - ${SSL_CERTIFICATE_CRT}:/etc/nginx/ssl/localhost.crt
             - ${SSL_CERTIFICATE_KEY}:/etc/nginx/ssl/localhost.key
@@ -48,8 +49,6 @@ services:
             - .env
         environment:
             - NGINX_HOST=${NGINX_HOST}
-            - TERM=xterm-color
-        command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
     # ElasticSearch
     elasticsearch:
