--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name ${NGINX_HOST};
+    server_name nginx_host;
     client_max_body_size 20M;
 
     root /var/www/deep-space-objects/public;
@@ -11,7 +11,7 @@ server {
     }
 
     location ~ ^/(index)\.php(/|$) {
-        fastcgi_pass php:9000;
+        fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
 
         include fastcgi_params;
