--- a/docker/php7-fpm/Dockerfile
+++ b/docker/php7-fpm/Dockerfile
@@ -30,12 +30,13 @@ RUN apt-get install -y build-essential
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
   && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 
+# Git
+RUN apt-get install -y git
+
 # bugfix: remove cmdtest to install yarn correctly.
 RUN apt-get remove -y cmdtest
 RUN apt-get update
 RUN apt-get install -y yarn
-
-#EXPOSE 9000
 
 # Clear archives in apt cache folder
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
