ElasticSearch : refactoring index and mapping

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,5 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{js,css,scss,twig,vue}]
+[*.{js,css,scss,twig,vue,json}]
 indent_size = 2
