--- a/config/elasticsearch/mappings/deepspaceobjects.mapping.json
+++ b/config/elasticsearch/mappings/deepspaceobjects.mapping.json
@@ -10,74 +10,7 @@
     }
   },
   "mappings": {
-    "constellation": {
-      "properties": {
-        "id": {
-          "type": "text",
-          "fields": {
-            "raw": {
-              "type": "keyword"
-            }
-          }
-        },
-        "geometry": {
-          "type": "geo_shape"
-        },
-        "geometryline": {
-          "type": "geo_shape"
-        },
-        "data": {
-          "properties": {
-            "gen": {
-              "type": "text"
-            },
-            "alt": {
-              "properties": {
-                "alt": {
-                  "type": "text",
-                  "fields": {
-                    "en": {
-                      "type": "text",
-                      "analyzer": "english"
-                    },
-                    "fr": {
-                      "type": "text",
-                      "analyzer": "french"
-                    },
-                    "es": {
-                      "type": "text",
-                      "analyzer": "spanish"
-                    },
-                    "de": {
-                      "type": "text",
-                      "analyzer": "german"
-                    },
-                    "pt": {
-                      "type": "text",
-                      "analyzer": "portuguese"
-                    },
-                    "it": {
-                      "type": "text",
-                      "analyzer": "italian"
-                    }
-                  }
-                }
-              }
-            },
-            "rank": {
-              "type": "integer"
-            },
-            "order": {
-              "type": "integer"
-            },
-            "loc": {
-              "type": "text"
-            }
-          }
-        }
-      }
-    },
-    "deepspaceobject": {
+    "_doc": {
       "properties": {
         "id": {
           "type": "text",
@@ -113,8 +46,8 @@
         },
         "data": {
           "properties": {
-            "desig": {
-              "type": "array",
+            "desigs": {
+              "type": "keyword",
               "normalizer": "lowercase_normalizer"
             },
             "alt": {
