Build entity from ES document

--- a/.env.dist
+++ b/.env.dist
@@ -29,3 +29,5 @@ COMPOSER_CACHE_DIR=/home/$(whoami)/.composer
 NPM_CACHE_DIR=/home/$(whoami)/.npm
 SSL_CERTIFICATE_CRT=/path/to/localhost.crt
 SSL_CERTIFICATE_KEY=/path/to/localhost.key
+ELK_HOST=
+ELK_PORT=
