--- a/.env.local.dist
+++ b/.env.local.dist
@@ -1,2 +1,4 @@
 ASTROBIN_API_KEY=PutHereYourOwnApiKey
 ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
+ELK_HOST=localhostforelk
+ELK_PORT=localportforelk
