--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,10 +13,8 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-#        bind:
-#            $locales: '%app_locales%'
-#            $defaultLocale: '%locale%'
-#            $emailSender: '%app.notifications.email_sender%'
+        bind:
+            $locale: '%kernel.default_locale%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -35,11 +33,10 @@ services:
 
     # Client Elastic Search
     Elastica\Client:
-#        public: true
         bind:
             $config:
-                host: elasticsearch
-                port: 9200
+                host: '%env(ELK_HOST)%'
+                port: '%env(ELK_PORT)%'
 
     # Exception listener
     App\EventListener\ExceptionListener:
