--- a/docker/php7-fpm/php.ini
+++ b/docker/php7-fpm/php.ini
@@ -1,7 +1,7 @@
 ; General settings
 date.timezone = Europe/Paris
 xdebug.max_nesting_level=500
-short_open_tag = off
+short_open_tag = Off
 memory_limit="512M"
 
 ; Error reporting optimized for production (http://www.phptherightway.com/#error_reporting)
@@ -11,6 +11,7 @@ error_reporting = E_ALL
 log_errors = On
 error_log = /var/log/php-app/error.log
 
+apc.enable_cli = 1
 # http://symfony.com/doc/current/performance.html
 opcache.interned_strings_buffer = 16
 opcache.memory_consumption = 256
@@ -20,7 +21,7 @@ opcache.validate_timestamps=0
 ; maximum memory allocated to store the results
 realpath_cache_size=4096K
 ; save the results for 10 minutes (600 seconds)
-realpath_cache_ttl=600
+realpath_cache_ttl=0
 
 ; Extensions
 #extension=imagick.so
