--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ networks:
     default:
         driver: bridge
 
+volumes:
+    es_data:
+        driver: local
+
 services:
     # PHP
     php:
@@ -12,13 +16,12 @@ services:
             args:
                 TIMEZONE: ${TIMEZONE}
         container_name: dso_php
-        hostname: php
         volumes:
             - ".:/var/www/deep-space-objects:rw,cached"
-            - ${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached
+            - ${COMPOSER_CACHE_DIR}:/home/site/.composer:rw
             - ${NPM_CACHE_DIR}:/home/site/.npm:rw,cached
-            - "./docker/php7-fpm/php.ini:/usr/local/etc/php/conf.d/030-custom.ini:ro"
             - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
+            - "./docker/php7-fpm/php.ini:/usr/local/etc/php/conf.d/030-custom.ini"
             - "${SSH_AUTH_SOCK}:/ssh-agent"
         env_file:
           - .env
@@ -34,14 +37,13 @@ services:
             args:
                 NGINX_HOST: ${NGINX_HOST}
         container_name: dso_nginx
-        hostname: nginx
         ports:
             - 80:80
             - 443:443
         depends_on:
             - php
         volumes:
-            - ".:/var/www/deep-space-objects:cached"
+            - ".:/var/www/deep-space-objects"
             - ./logs/nginx/:/var/log/nginx
             - ${SSL_CERTIFICATE_CRT}:/etc/nginx/ssl/localhost.crt
             - ${SSL_CERTIFICATE_KEY}:/etc/nginx/ssl/localhost.key
@@ -55,6 +57,8 @@ services:
         image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
         container_name: dso_elasticsearch
         hostname: elasticsearch
+        volumes:
+            - es_data:/usr/share/elasticsearch/data
         environment:
             - cluster.name=demo
             - bootstrap.memory_lock=true
