--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,7 +14,7 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            $locale: '%kernel.default_locale%'
+            $locale: "@=service('request_stack').getCurrentRequest().getLocale()"
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
