--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
                 TIMEZONE: ${TIMEZONE}
         container_name: dso_php
         volumes:
-            - ".:/var/www/deep-space-objects:rw,cached"
+            - ".:/var/www/deep-space-objects"
             - ${COMPOSER_CACHE_DIR}:/home/site/.composer:rw
             - ${NPM_CACHE_DIR}:/home/site/.npm:rw,cached
             - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
