--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.18",
         "vue-agile": "^0.3.7",
+        "vue-flux": "^5.1.9",
         "vue-i18n": "^8.4.0",
         "vue-lazy-image-loading": "^1.1.5",
         "vue-loader": "^15.4.2",
