--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "copy-webpack-plugin": "^4.6.0",
+        "d3-celestial": "^0.6.7",
         "node-sass": "^4.10.0",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.18",
