--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,6 +33,7 @@ services:
 
     App\EventSubscriber\LocaleSubscriber:
         arguments: ['%kernel.default_locale%']
+        tags: [kernel.event_subscriber]
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
