--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/maker-bundle": "^1.9",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
+        "symfony/requirements-checker": "^1.1",
         "symfony/security-bundle": "4.2.*",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/templating": "4.2.*",
