Update and adding StopWatch + Check requirement

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/requirements-checker": "^1.1",
         "symfony/security-bundle": "4.2.*",
+        "symfony/stopwatch": "4.2.*",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/templating": "4.2.*",
         "symfony/translation": "4.2.*",
@@ -59,7 +60,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
