--- a/.env.dist
+++ b/.env.dist
@@ -9,6 +9,7 @@ APP_ENV=dev
 APP_SECRET=SECRET
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
+TRUSTED_HOSTS=localhost
 ###< symfony/framework-bundle ###
 
 
