--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -11,7 +11,7 @@ server {
     }
 
     location ~ ^/(index)\.php(/|$) {
-        fastcgi_pass php-upstream;
+        fastcgi_pass php:9000;
         #  fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
 
@@ -53,8 +53,8 @@ server {
 #        proxy_set_header Host $host;
    }
 
-    location ~ ^/.+\.php(/|$) {
-        fastcgi_pass php-upstream;
+    location ~ ^/(index)\.php(/|$) {
+        fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
