Fix field description

--- a/config/elasticsearch/mappings/constellations.mapping.json
+++ b/config/elasticsearch/mappings/constellations.mapping.json
@@ -54,10 +54,10 @@
                 }
               }
             },
-            "desc": {
+            "description": {
               "properties": {
-                "alt": {
-                  "desc": "text",
+                "description": {
+                  "type": "text",
                   "fields": {
                     "en": {
                       "type": "text",
