--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -11,8 +11,8 @@ server {
     }
 
     location ~ ^/(index)\.php(/|$) {
-        fastcgi_pass php:9000;
-        #  fastcgi_pass php:9000;
+        #fastcgi_pass php:9000;
+        fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
 
         include fastcgi_params;
@@ -54,7 +54,8 @@ server {
    }
 
     location ~ ^/(index)\.php(/|$) {
-        fastcgi_pass php:9000;
+        #fastcgi_pass php:9000;
+        fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
