--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 networks:
-    default:
+    dso_stack:
         driver: bridge
 
 volumes:
@@ -17,8 +17,10 @@ services:
                 TIMEZONE: ${TIMEZONE}
         container_name: dso_php
         hostname: php
+        ports:
+            - 9000:9000
         volumes:
-            - ".:/var/www/deep-space-objects"
+            - .:/var/www/deep-space-objects:cached
             - "${COMPOSER_CACHE_DIR}:/home/site/.composer:rw,cached"
             - "${NPM_CACHE_DIR}:/home/site/.npm:rw,cached"
             - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
@@ -30,6 +32,8 @@ services:
             - SSH_AUTH_SOCK=/ssh-agent
             - TERM=xterm-color
         working_dir: /var/www/deep-space-objects
+        networks:
+          - dso_stack
 
     # NGINX
     nginx:
@@ -45,14 +49,16 @@ services:
         depends_on:
             - php
         volumes:
-            - ".:/var/www/deep-space-objects"
-            - ./logs/nginx/:/var/log/nginx
+            - .:/var/www/deep-space-objects:cached
+            - ./logs/nginx/:/var/log/nginx:cached
             - ${SSL_CERTIFICATE_CRT}:/etc/nginx/ssl/localhost.crt
             - ${SSL_CERTIFICATE_KEY}:/etc/nginx/ssl/localhost.key
         env_file:
             - .env
         environment:
             - NGINX_HOST=${NGINX_HOST}
+        networks:
+            - dso_stack
 
     # ElasticSearch
     elasticsearch:
@@ -71,6 +77,8 @@ services:
                 hard: -1
         ports:
             - 9200:9200
+        networks:
+            - dso_stack
 
     # Kibana
     kibana:
@@ -80,6 +88,8 @@ services:
             - elasticsearch
         ports:
             - 5601:5601
+        networks:
+            - dso_stack
 
     # Redis
     dso_redis:
@@ -87,3 +97,5 @@ services:
         container_name: dso_redis
         ports:
           - 6379:6379
+        networks:
+            - dso_stack
