--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,7 +3,7 @@ worker_processes 4;
 pid /run/nginx.pid;
 
 events {
-  worker_connections  2048;
+  worker_connections 2048;
   multi_accept on;
   use epoll;
 }
@@ -22,6 +22,7 @@ http {
   gzip on;
   gzip_disable "msie6";
   include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/sites-enabled/*;
   open_file_cache max=100;
   client_body_temp_path /tmp 1 2;
   client_body_buffer_size 256k;
